--- a/checklist/index.html
+++ b/checklist/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="css/material.min.css">
 	<link rel="stylesheet" href="css/style.css">	
-	<link rel="manifest" href="js/manifest.json">
+	<link rel="manifest" href="manifest.json">
  </head>
   </head>
   <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
