--- a/checklist/index.html
+++ b/checklist/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="css/material.min.css">
 	<link rel="stylesheet" href="css/style.css">	
-	<link rel="manifest" href="manifest.json">
+	<link rel="manifest" href="manifest.json?v=1">
  </head>
   </head>
   <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
@@ -16,7 +16,7 @@
       <header class="mdl-layout__header">
 		<div class="mdl-layout__header-row">
 		  <!-- Title -->
-		  <span class="mdl-layout-title" id="tesste">Checklist</span>
+		  <span class="mdl-layout-title" id="tesste">Checklist - V1</span>
 		  <!-- Add spacer, to align navigation to the right -->
 		  <div class="mdl-layout-spacer"></div>
 		  <!-- Navigation. We hide it in small screens. -->
