--- a/checklist/index.html
+++ b/checklist/index.html
@@ -1,127 +1,62 @@
 <!doctype html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#3f51b5">
-  <title>Checklist</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="css/material.min.css">
-	<link rel="stylesheet" href="css/style.css">	
-	<link rel="manifest" href="manifest.json?v=5">
- </head>
-  </head>
-  <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
-		<div class="mdl-layout__header-row">
-		  <!-- Title -->
-		  <span class="mdl-layout-title" id="tesste">Checklist - V4</span>
-		  <!-- Add spacer, to align navigation to the right -->
-		  <div class="mdl-layout-spacer"></div>
-		  <!-- Navigation. We hide it in small screens. -->
-		  <nav class="mdl-navigation mdl-layout--large-screen-only">
-			<a class="mdl-navigation__link" href="">Link</a>
-			<a class="mdl-navigation__link" href="">Link</a>
-			<a class="mdl-navigation__link" href="">Link</a>
-			<a class="mdl-navigation__link" href="">Link</a>
-		  </nav>
-		</div>
-	  </header>
-      <main class="mdl-layout__content">
-        <div class="mdl-layout__tab-panel is-active" id="overview">          
-          <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-            <div class="mdl-card mdl-cell mdl-cell--12-col">
-              <div class="mdl-card__supporting-text">                
-                1) A cozinha parece um chiqueiro?
-              </div>
-              <div class="mdl-card__actions">
-                <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-				  <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1">
-				  <span class="mdl-radio__label">OK</span>
-				</label>
-				<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-				  <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
-				  <span class="mdl-radio__label">N/A</span>
-				</label>
-				<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
-				  <input type="radio" id="option-3" class="mdl-radio__button" name="options" value="3">
-				  <span class="mdl-radio__label">Fuu</span>
-				</label>
-				<label class="">
-				 <input type="file" accept="image/*;capture=camera">
-				  <span class="mdl-radio__label">Foto</span>
-				</label>
-				<div class="mdl-textfield mdl-js-textfield" style="display:block;">
-					<textarea class="mdl-textfield__input" type="text" rows= "3" id="sample5" ></textarea>
-					<label class="mdl-textfield__label" for="sample5">Obs...</label>
-				  </div>
-              </div>
-			  </section>
-			<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-			  <div class="mdl-card mdl-cell mdl-cell--12-col">			
-              <div class="mdl-card__supporting-text">                
-                2) A temperatura do freezer esta abaixo dos 5 graus?
-              </div>
-              <div class="mdl-card__actions">
-                <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-				  <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1">
-				  <span class="mdl-radio__label">OK</span>
-				</label>
-				<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-				  <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
-				  <span class="mdl-radio__label">N/A</span>
-				</label>
-				<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
-				  <input type="radio" id="option-3" class="mdl-radio__button" name="options" value="3">
-				  <span class="mdl-radio__label">Fuu</span>
-				</label>
-				<div class="mdl-textfield mdl-js-textfield" style="display:block;">
-					<textarea class="mdl-textfield__input" type="text" rows= "3" id="sample5" ></textarea>
-					<label class="mdl-textfield__label" for="sample5">Obs...</label>
-				  </div>
-              </div>
-			  </section>
-			<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-			  <div class="mdl-card mdl-cell mdl-cell--12-col">
-              <div class="mdl-card__supporting-text">                
-                3) A carne esta verde igual ao hulk?
-              </div>
-              <div class="mdl-card__actions">
-                <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-				  <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1">
-				  <span class="mdl-radio__label">OK</span>
-				</label>
-				<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-				  <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
-				  <span class="mdl-radio__label">N/A</span>
-				</label>
-				<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
-				  <input type="radio" id="option-3" class="mdl-radio__button" name="options" value="3">
-				  <span class="mdl-radio__label">Fuu</span>
-				</label>
-				<div class="mdl-textfield mdl-js-textfield" style="display:block;">
-					<textarea class="mdl-textfield__input" type="text" rows= "3" id="sample5" ></textarea>
-					<label class="mdl-textfield__label" for="sample5">Obs...</label>
-				  </div>
-              </div>
-            </div>            
-          </section>          
-        </div>        
-      </main>
-    </div>
-
-<script defer src="js/material.min.js"></script>
-<script type="text/javascript">
-if('serviceWorker' in navigator){
-	navigator.serviceWorker.register('js/sw.js', {
-		scope: '/'
-	}).then(function(reg) {
-		//document.getElementById('tesste').innerHTML = '-------> SUCCESS';
-	}, function(err) {
-		//document.getElementById('tesste').innerHTML = '-------> Faill';
-	});
-}
-</script>
- </body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#3f51b5">
+        <title>Checklist</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="css/material.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="manifest" href="manifest.json?v=5">
+    </head>
+    </head>
+    <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+		  <header class="mdl-layout__header">
+			<div class="mdl-layout__header-row">
+			  <!-- Title -->
+			  <span class="mdl-layout-title">Title</span>
+			  <!-- Add spacer, to align navigation to the right -->
+			  <div class="mdl-layout-spacer"></div>
+			  <!-- Navigation. We hide it in small screens. -->
+			  <nav class="mdl-navigation mdl-layout--large-screen-only">
+				<a class="mdl-navigation__link" href="">Link</a>
+				<a class="mdl-navigation__link" href="">Link</a>
+				<a class="mdl-navigation__link" href="">Link</a>
+				<a class="mdl-navigation__link" href="">Link</a>
+			  </nav>
+			</div>
+		  </header>
+		  <div class="mdl-layout__drawer">
+			<span class="mdl-layout-title">Title</span>
+			<nav class="mdl-navigation">
+			  <a class="mdl-navigation__link" href="">Link</a>
+			  <a class="mdl-navigation__link" href="">Link</a>
+			  <a class="mdl-navigation__link" href="">Link</a>
+			  <a class="mdl-navigation__link" href="">Link</a>
+			</nav>
+		  </div>
+        <main class="mdl-layout__content">
+            <div class="mdl-layout__tab-panel is-active" id="overview">
+				<center><h5 id="checklist-name">Name check</h5></center>
+				<form name="checklist-questions" id="form-checklist"></form>    
+            </div>        
+        </main>
+        </div>
+        <script defer src="js/material.min.js"></script>
+        <script defer src="js/nunjucks.min.js"></script>
+        <script defer src="js/main.js"></script>
+        <script type="text/javascript">
+            if('serviceWorker' in navigator){
+            	navigator.serviceWorker.register('js/sw.js', {
+            		scope: '/'
+            	}).then(function(reg) {
+            		//document.getElementById('tesste').innerHTML = '-------> SUCCESS';
+            	}, function(err) {
+            		//document.getElementById('tesste').innerHTML = '-------> Faill';
+            	});
+            }
+        </script>
+    </body>
 </html>
