--- a/checklist/index.html
+++ b/checklist/index.html
@@ -40,8 +40,7 @@
         <script defer src="js/main.js"></script>
         <script type="text/javascript">
             if('serviceWorker' in navigator){
-            	navigator.serviceWorker.register('js/sw.js', {
-            		scope: '/'
+            	navigator.serviceWorker.register('sw.js?v=2', {
             	}).then(function(reg) {
             		//document.getElementById('tesste').innerHTML = '-------> SUCCESS';
             	}, function(err) {
