--- a/checklist/index.html
+++ b/checklist/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#3f51b5">
 	<meta name="mobile-web-app-capable" content="yes">
+	<meta name=application-name content=Bellota>
         <title>Checklist</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="css/material.min.css">
